Java 25 Part Two
Replaced JNA with the modern FFM